Created a basic TypeScript web client (#9)
* Changed the landing page of the react app to display a list of plugins (will change to a grid eventually)

* Created a basic button for the plugins

* Refactored the components into classes

* Added an icon

* Set up the images to render icons

* Created a basic test for the plugins

* Created a basic test for the web app

* Added coverage support

* Use lcov for the TypeScript coverage

* Wildcard the lcov data
